# pi-explanations

./: .gitignore  README.md  eval.py  explain.py  forest_encoder.py  forest_explainer.py  forest_wrapper.py  tree_encoder.py  tree_explainer.py  tree_wrapper.py
paper/: .main.tex.swp  main.bib  main.tex
slides/: slides.tex
solbert/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  install-pymod.sh  setup.py  uninstall-pymod.sh  uninstall.info
solbert/cadical/src/Cadical-stamp/: Cadical-gitinfo.txt
solbert/cadical/tmp/: Cadical-cfgcmd.txt  Cadical-gitclone.cmake  Cadical-gitupdate.cmake
solbert/src/: CMakeLists.txt  Main.cc  Makefile  cmake_install.cmake  solbert.cc
solbert/src/apps/: CMakeLists.txt  EnumerateModels.h  Makefile  ModelIterator.h  PrimeImplicants.h  PrimeImplicants2.h  cmake_install.cmake
solbert/src/util/: CMakeLists.txt  Makefile  PyUtil.h  ResourceLimits.h  cmake_install.cmake
sub/: cnf2dnf.py
